<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_blue"
    tools:context=".ui.detail.DetailTvShowActivity"
    android:orientation="vertical"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/tvImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/img"
            tools:layout_editor_absoluteX="0dp"
            tools:ignore="ContentDescription" />


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:background="@drawable/film_card_detail"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.315">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:fontFamily="sans-serif-condensed-medium"
                tools:text="@string/film_name"
                android:textColor="@color/grey_to_white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="InefficientWeight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvRating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:fontFamily="sans-serif-condensed-medium"
                    tools:text="@string/film_rating"
                    android:textColor="@color/yello_rating"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="InefficientWeight" />

                <ImageView
                    android:id="@+id/star1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_baseline_star_24"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/star2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:src="@drawable/ic_baseline_star_24"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/star3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:src="@drawable/ic_baseline_star_24"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/star4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:src="@drawable/ic_baseline_star_24"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/star5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:src="@drawable/ic_baseline_star_24"
                    android:visibility="gone"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvReleaseDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed-medium"
                    tools:text="@string/film_release_date"
                    android:textColor="@color/grey_to_white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvPopular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="sans-serif-condensed-medium"
                    tools:text="@string/film_time"
                    android:textColor="@color/grey_to_white"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:paddingBottom="15dp"
                tools:text="@string/film_genre"
                android:textColor="@color/grey_to_white"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="10dp"
            android:text="@string/overview"
            android:textColor="@color/grey_to_white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
            app:layout_constraintHorizontal_bias="0.017"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <TextView
            android:id="@+id/tvOverview"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:padding="10dp"
            tools:text="@string/film_overview"
            android:textAlignment="textStart"
            android:textColor="@color/grey_to_white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/textView10"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView10"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/share_tv"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rounded_button"
            android:padding="10dp"
            android:text="@string/share_tv_show"
            android:textColor="@color/grey_to_white"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.075"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOverview"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>